--- a/PetFinder/pubspec.yaml
+++ b/PetFinder/pubspec.yaml
@@ -23,8 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^0.5.30  
-
+  google_maps_flutter: ^0.5.30
+  firebase_database: ^3.1.6
+  firebase_core: ^0.4.4+3  
+  firebase_web: ^5.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
