--- a/PetFinder/pubspec.yaml
+++ b/PetFinder/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_database: ^3.1.6
   firebase_core: ^0.4.4+3  
   firebase_web: ^5.0.9
+  flutter_speed_dial: ^1.2.5
+  geolocator: ^6.0.0+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
