--- a/PetFinder/pubspec.yaml
+++ b/PetFinder/pubspec.yaml
@@ -25,8 +25,7 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^0.5.30
   firebase_database: ^3.1.6
-  firebase_core: ^0.4.4+3  
-  firebase_web: ^5.0.9
+  firebase_core_web: ^0.2.0
   flutter_speed_dial: ^1.2.5
   geolocator: ^6.0.0+4
 
